# razer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: auto_release.yml  minify.yml
crates/ws-rs/: Cargo.toml
crates/ws-rs/src/: communication.rs
examples/: chat.html  chat.rs  count.html  count.rs  hello.html  hello.rs  razer.js  ssl_hello.html  ssl_hello.rs
js/: index.html  razer-compressed.js  razer-uncompressed.js  razer.js  razer.min.js
src/: connections.rs  lib.rs  listener.rs  send.rs
src/event/: event_type.rs  handler.rs  mod.rs
