[package]
name = "razer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.40"
serde_json = "1.0.81"
ws = {version = "0.9.2", features = ["ssl"]}

[dev-dependencies]
lazy_static = "1.4.0"
