[package]
name = "razer"
version = "0.1.1"
edition = "2021"
description = "A serverside way to controll your website with rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.40"
serde_json = "1.0.81"
ws = {version = "0.9.2", features = ["ssl"]}
lazy_static = "1.4.0"
