[package]
name = "razer"
version = "0.1.3"
edition = "2021"
description = "A server side way to controll your website with rust"
license = "MIT"
categories = ["web-programming", "web-programming::websocket"]
exclude = ["js/**/*", ".github/**/*"]
keywords = ["server-side", "fast", "razer"]
readme = "README.md"
repository = "https://github.com/AMTitan/razer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.40"
serde_json = "1.0.81"
ws = {path = "crates/ws-rs", features = ["ssl"]}
lazy_static = "1.4.0"
